--- a/blog/style/main.css
+++ b/blog/style/main.css
@@ -430,3 +430,10 @@ img.align-center {
     margin-left: auto;
     margin-right: auto;
 }
+
+.caption {
+  text-align: center;
+  margin-top: 0;
+  font-style: italic;
+  font-size: smaller;
+}
